--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
 @import "reset.css";
 
+body {
+  font-family: Arial, sans-serif;
+}
+
 /* header */
 #header-container {
   height: 150px;
-  border: 1px solid #000;
 
   display: flex;
   flex-direction: column;
@@ -13,8 +16,6 @@
 /* auth */
 
 #header-container .auth-container {
-  border: 1px solid red;
-
   width: 100%;
   height: 20%;
   align-items: center;
@@ -33,33 +34,49 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 
-#header-container .auth-container .login1 {
-  /* 로그인 */
+#header-container .auth-container .auth-box .login1 {
+  overflow: hiddlen;
+  white-space: nowrap;
 }
 
-#header-container .auth-container .login2 {
-  /* 회원가입 */
+#header-container .auth-container .auth-box .login2 {
+  overflow: hiddlen;
+  white-space: nowrap;
 }
 
-#header-container .auth-container .login3 {
-  /* 기부금영수증 */
+#header-container .auth-container .auth-box .login3 {
+  overflow: hiddlen;
+  white-space: nowrap;
 }
 
-#header-container .auth-container .login4 {
-  /* FAQ */
+#header-container .auth-container .auth-box .login4 {
+  overflow: hiddlen;
+  white-space: nowrap;
 }
 
-#header-container .auth-container .login5 {
-  /* 검색창 */
+#header-container .auth-container .auth-box .login5 {
+  overflow: hiddlen;
+  white-space: nowrap;
+}
+
+#header-container .auth-container .auth-box .regex {
+  overflow: hiddlen;
+  white-space: nowrap;
+
+  margin-left: 5px;
+  margin-right: 5px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
 /* nav */
 
 #header-container .nav-container {
-  border: 1px solid blue;
-
   width: 100%;
   height: 80%;
   align-items: center;
@@ -67,14 +84,78 @@
   display: flex;
 }
 
+#header-container .nav-container .nav-box {
+  width: 100%;
+  height: 100%;
+  align-items: center;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+#header-container .nav-container .nav-box .menu1 .img {
+  background: url(sonkkot-logo.png) no-repeat center/cover;
+  width: 238px;
+  height: 116px;
+}
+
+#header-container .nav-container .nav-box .menu2 {
+  margin: 50px;
+
+  font-weight: bold;
+  font-size: 22px;
+
+  height: 30px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 50px;
+  overflow: hiddlen;
+  white-space: nowrap;
+}
+
+#header-container .nav-container .nav-box .menu3 {
+  margin: 50px;
+  font-variant-numeric: tabular-nums;
+  font-weight: bold;
+  font-size: 22px;
+
+  overflow: hiddlen;
+  white-space: nowrap;
+}
+
+#header-container .nav-container .nav-box .menu4 {
+  border: 1px solid #000;
+}
+
+#header-container .nav-container .nav-box .menu5 {
+  border: 1px solid #000;
+}
+
 /* main */
 #main-container {
-  height: 1500px;
+  overflow: auto;
   border: 1px solid #000;
+}
+
+#main-container .img1 {
+  height: 700px;
+  background: url(main-img1.jpg) no-repeat center/cover;
 }
 
 /* header */
 #footer-container {
-  height: 200px;
-  border: 1px solid #000;
+  background-color: #f8f9fa;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+}
+
+#footer-container .copy-right {
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
